Remove hoodies and t-shirts from navigation menu

--- a/products.html
+++ b/products.html
@@ -28,13 +28,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html" class="active">Shop</a></li>
-                    <li><a href="products.html?category=hoodies">Hoodies</a></li>
-                    <li><a href="products.html?category=t-shirts">T-Shirts</a></li>
-                    <li><a href="products.html?category=accessories">Accessories</a></li>
-                    </ul>
-            </nav>
-            
-            <!-- Header Actions -->
+                    <li><a href="products.html?category=sweaters">Sweaters</a></li>
             <div class="header-actions">
                 <a href="tel:9382070718" class="phone-link" style="margin-right: 1rem; color: #333; text-decoration: none; font-weight: 500; display: flex; align-items: center; gap: 0.5rem;">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
