Restore all products: hoodies, t-shirts, sweaters, and accessories

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="products.html">Shop</a></li>
+                    <li><a href="products.html?category=hoodies">Hoodies</a></li>
+                    <li><a href="products.html?category=t-shirts">T-Shirts</a></li>
                     <li><a href="products.html?category=accessories">Accessories</a></li>
                     </ul>
             </nav>
